feat: :sparkles: handler, router, swagger
