# internal/infrastructure/api/handlers/person_handler.go
@@ -1,0 +1,164 @@
+package handlers
+
+import (
+	"devfest/internal/domain"
+	"devfest/internal/infrastructure/api/dtos"
+	"devfest/internal/infrastructure/api/response"
+	"devfest/internal/infrastructure/api/utils"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+)
+
+type PersonHandler struct {
+	usecase domain.PersonUsecase
+}
+
+func NewPersonHandler(usecase domain.PersonUsecase) *PersonHandler {
+	return &PersonHandler{usecase: usecase}
+}
+
+// GetAll
+func (h *PersonHandler) GetAll(ctx *gin.Context) {
+	people, err := h.usecase.GetAll(ctx.Request.Context())
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, people)
+}
+
+// GetByID
+func (h *PersonHandler) GetByID(ctx *gin.Context) {
+	id, err := uuid.Parse(ctx.Param("id"))
+	if err != nil {
+		newErr := domain.NewAppError(domain.TypeBadRequest, "Invalid ID", err)
+		response.HandleError(ctx, newErr)
+		return
+	}
+
+	person, err := h.usecase.GetByID(ctx.Request.Context(), id)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, person)
+}
+
+// GetByEmail
+func (h *PersonHandler) GetByEmail(ctx *gin.Context) {
+	email := ctx.Param("email")
+
+	person, err := h.usecase.GetByEmail(ctx.Request.Context(), &email)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, person)
+}
+
+// GetPaged
+func (h *PersonHandler) GetPaged(ctx *gin.Context) {
+	search := ctx.DefaultQuery("search", "")
+
+	page, pageSize := utils.GetPaginationParams(ctx)
+	if pageSize > 100 {
+		pageSize = 100
+	}
+
+	people, total, err := h.usecase.ListPaged(ctx.Request.Context(), search, int32(page), int32(pageSize))
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	res := dtos.PagedResponse[domain.Person]{
+		Data: people,
+		Meta: dtos.PagedMeta{
+			Total:    total,
+			Page:     int32(page),
+			PageSize: int32(pageSize),
+		},
+	}
+
+	ctx.JSON(http.StatusOK, res)
+}
+
+// Create
+func (h *PersonHandler) Create(ctx *gin.Context) {
+	var dto dtos.CreatePersonDTO
+	if err := ctx.ShouldBindJSON(&dto); err != nil {
+		newErr := domain.NewAppError(domain.TypeBadRequest, "Invalid request body", err)
+		response.HandleError(ctx, newErr)
+		return
+	}
+
+	uid, err := utils.GetUserId(ctx)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+	dto.CreatedBy = uid
+
+	person, err := h.usecase.Create(ctx.Request.Context(), dto)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, person)
+}
+
+// Update
+func (h *PersonHandler) Update(ctx *gin.Context) {
+	id, err := uuid.Parse(ctx.Param("id"))
+	if err != nil {
+		newErr := domain.NewAppError(domain.TypeBadRequest, "Invalid ID", err)
+		response.HandleError(ctx, newErr)
+		return
+	}
+
+	var dto dtos.UpdatePersonDTO
+	if err := ctx.ShouldBindJSON(&dto); err != nil {
+		newErr := domain.NewAppError(domain.TypeBadRequest, "Invalid request body", err)
+		response.HandleError(ctx, newErr)
+		return
+	}
+
+	uid, err := utils.GetUserId(ctx)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+	dto.UpdatedBy = uid
+
+	person, err := h.usecase.Update(ctx.Request.Context(), id, dto)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, person)
+}
+
+// Delete
+func (h *PersonHandler) Delete(ctx *gin.Context) {
+	id, err := uuid.Parse(ctx.Param("id"))
+	if err != nil {
+		newErr := domain.NewAppError(domain.TypeBadRequest, "Invalid ID", err)
+		response.HandleError(ctx, newErr)
+		return
+	}
+
+	err = h.usecase.Delete(ctx.Request.Context(), id)
+	if err != nil {
+		response.HandleError(ctx, err)
+		return
+	}
+
+	ctx.Status(http.StatusNoContent)
+}
